--- a/style.css
+++ b/style.css
@@ -26,9 +26,34 @@ header{
     display: flex;
 }
 
+.d-flex-h{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: auto 40px ;
+    flex-wrap: wrap;
+}
+
+nav a{
+   color: white;
+}
+nav a:hover, nav a.active{
+    color: #beffe1;
+    text-decoration: none;
+}
+
+.mr-3{
+    margin-right: 3rem;
+}
+
 .container{
     margin: auto 25px;
     padding: auto 25px;
+}
+
+.container-sm{
+    margin: auto 6vw;
+    padding: auto 6vw;
 }
 
 .column-1{
@@ -42,14 +67,13 @@ header{
 
 @media(min-width:767px){
 .column-1{
-    width: 50%;
-    margin-left: 5%;
+    width: 55%;
 }
 
 .column-2{
-    width: 35%;
+    width: 40%;
     display: flex;
-    justify-content: start;
+    justify-content: center;
 }
 
 .column-2.img{
@@ -73,4 +97,21 @@ footer{
     background-color: rgb(59, 59, 59);
     color: white;
     padding: 10px 0;
+}
+
+.img-wrapper-1{
+    width: 100%;
+    height: 25rem;
+    overflow: hidden;
+    margin: 2rem auto;
+}
+
+.img-wrapper-1 img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+dl dt{
+    font-weight: bold;
 }
